--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="icon" type="image/png" href="ALURA.jpeg" />
 </head>
 <body>
-  <div class="background-overlay"></div><div class="loading-container">
+<div class="loading-container">
   <progress id="loading-progress" max="100"></progress>
   <img id="loading-image" src="download (4).jpeg" alt="Loading"></div > 
   
@@ -108,60 +108,7 @@ font-size: 16px;
             }
         </script>
   
-  <script>
-    window.addEventListener('load', function() {
-      showNotification();
-    });
-
-    function showNotification() {
-      var notificationContainer = document.createElement('div');
-      notificationContainer.className = 'notification-container';
-
-      var titleElement = document.createElement('h2');
-      titleElement.textContent = 'Título de la Notificación';
-
-      var messageElement = document.createElement('p');
-      messageElement.textContent = 'Esta es una notificación de ejemplo. ¿Deseas aceptarla?';
-
-      var acceptButton = document.createElement('button');
-      acceptButton.textContent = 'Aceptar';
-      acceptButton.addEventListener('click', function() {
-        // Acción al aceptar la notificación
-        console.log('Notificación aceptada');
-        hideNotification();
-      });
-
-      var rejectButton = document.createElement('button');
-      rejectButton.textContent = 'No Aceptar';
-      rejectButton.addEventListener('click', function() {
-        // Acción al no aceptar la notificación
-        console.log('Notificación no aceptada');
-        hideNotification();
-      });
-
-      notificationContainer.appendChild(titleElement);
-      notificationContainer.appendChild(messageElement);
-      notificationContainer.appendChild(acceptButton);
-      notificationContainer.appendChild(rejectButton);
-
-      document.body.appendChild(notificationContainer);
-
-      // Mostrar la notificación después de un retraso
-      setTimeout(function() {
-        notificationContainer.classList.add('show');
-      }, 500);
-
-      function hideNotification() {
-        // Ocultar y eliminar la notificación
-        notificationContainer.classList.remove('show');
-        setTimeout(function() {
-          document.body.removeChild(notificationContainer);
-          document.body.removeChild(document.querySelector('.background-overlay'));
-        }, 500);
-      }
-    }
-  </script>
-  
+ 
   
   
   <style> progress{
